--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "babel-core": "^5.5.8",
     "babel-loader": "^5.1.4",
     "node-libs-browser": "^0.5.2",
+    "raw-loader": "^0.5.1",
     "webpack": "^1.9.11",
     "webpack-dev-server": "^1.9.0"
   },
