--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
     "start": "node node_modules/.bin/webpack-dev-server --content-base src --hot"
   },
   "devDependencies": {
+    "autoprefixer-core": "^5.2.0",
     "babel-core": "^5.5.8",
     "babel-loader": "^5.1.4",
+    "babel-runtime": "^5.5.8",
     "css-loader": "^0.14.5",
+    "extract-text-webpack-plugin": "^0.8.2",
     "file-loader": "^0.8.4",
     "node-libs-browser": "^0.5.2",
     "raw-loader": "^0.5.1",
