--- a/package.json
+++ b/package.json
@@ -3,23 +3,24 @@
     "start": "node node_modules/.bin/webpack-dev-server --content-base src --hot"
   },
   "devDependencies": {
+
+  },
+  "dependencies": {
+    "angular": "^1.3.16",
+    "angular-ui-router": "^0.2.15",
     "autoprefixer-core": "^5.2.0",
     "babel-core": "^5.5.8",
     "babel-loader": "^5.1.4",
     "babel-runtime": "^5.5.8",
+    "bootstrap": "^3.3.4",
     "css-loader": "^0.14.5",
     "extract-text-webpack-plugin": "^0.8.2",
     "file-loader": "^0.8.4",
+    "jwt-decode": "^1.1.1",
     "node-libs-browser": "^0.5.2",
     "raw-loader": "^0.5.1",
     "style-loader": "^0.12.3",
     "webpack": "^1.9.11",
     "webpack-dev-server": "^1.9.0"
-  },
-  "dependencies": {
-    "angular": "^1.3.16",
-    "angular-ui-router": "^0.2.15",
-    "bootstrap": "^3.3.4",
-    "jwt-decode": "^1.1.1"
   }
 }
