--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "scripts": {
+    "build": "webpack --config webpack.build.js --bail -p",
     "start": "node node_modules/.bin/webpack-dev-server --history-api-fallback --hot --inline --progress"
   },
-  "devDependencies": {
-
-  },
+  "devDependencies": {},
   "dependencies": {
     "angular": "^1.3.16",
     "angular-ui-router": "^0.2.15",
@@ -16,8 +15,10 @@
     "css-loader": "^0.14.5",
     "extract-text-webpack-plugin": "^0.8.2",
     "file-loader": "^0.8.4",
+    "html-webpack-plugin": "^1.5.2",
     "jwt-decode": "^1.1.1",
     "node-libs-browser": "^0.5.2",
+    "postcss-loader": "^0.4.4",
     "raw-loader": "^0.5.1",
     "style-loader": "^0.12.3",
     "webpack": "^1.9.11",
