--- a/package.json
+++ b/package.json
@@ -1,9 +1,24 @@
 {
   "scripts": {
     "build": "webpack --config webpack.build.js --bail -p",
-    "start": "node node_modules/.bin/webpack-dev-server --history-api-fallback --hot --inline --progress"
+    "dev": "node node_modules/.bin/webpack-dev-server --history-api-fallback --hot --inline --progress",
+    "test": "npm run test:unit",
+    "test:unit": "karma start",
+    "test:unit:live": "karma start --auto-watch --no-single-run"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "angular-mocks": "^1.4.1",
+    "jasmine-core": "^2.3.4",
+    "karma": "^0.12.36",
+    "karma-coverage": "^0.4.2",
+    "karma-jasmine": "^0.3.5",
+    "karma-phantomjs-launcher": "^0.2.0",
+    "karma-sourcemap-loader": "^0.3.5",
+    "karma-spec-reporter": "0.0.19",
+    "karma-webpack": "^1.5.1",
+    "null-loader": "^0.1.1",
+    "phantomjs": "^1.9.17"
+  },
   "dependencies": {
     "angular": "^1.3.16",
     "angular-ui-router": "^0.2.15",
