--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "angular-mocks": "^1.4.1",
+    "isparta-instrumenter-loader": "^0.2.1",
     "jasmine-core": "^2.3.4",
     "karma": "^0.12.36",
     "karma-coverage": "^0.4.2",
