--- a/package.json
+++ b/package.json
@@ -19,37 +19,37 @@
   },
   "homepage": "https://github.com/Foxandxss/GermanWords-ng1-webpack",
   "dependencies": {
-    "angular": "^1.3.16",
+    "angular": "^1.4.5",
     "angular-ui-router": "^0.2.15",
-    "autoprefixer-core": "^5.2.0",
+    "bootstrap": "^3.3.4",
+    "jwt-decode": "^1.1.1"
+  },
+  "devDependencies": {
+    "angular-mocks": "^1.4.5",
+    "autoprefixer": "^6.0.2",
     "babel-core": "^5.5.8",
     "babel-loader": "^5.1.4",
     "babel-runtime": "^5.5.8",
-    "bootstrap": "^3.3.4",
-    "css-loader": "^0.14.5",
+    "css-loader": "^0.18.0",
     "extract-text-webpack-plugin": "^0.8.2",
     "file-loader": "^0.8.4",
     "html-webpack-plugin": "^1.5.2",
-    "jwt-decode": "^1.1.1",
+    "isparta-instrumenter-loader": "^0.2.1",
+    "jasmine-core": "^2.3.4",
+    "karma": "^0.13.2",
+    "karma-coverage": "^0.5.2",
+    "karma-jasmine": "^0.3.5",
+    "karma-phantomjs-launcher": "^0.2.0",
+    "karma-sourcemap-loader": "^0.3.5",
+    "karma-spec-reporter": "0.0.20",
+    "karma-webpack": "^1.5.1",
     "node-libs-browser": "^0.5.2",
-    "postcss-loader": "^0.4.4",
+    "null-loader": "^0.1.1",
+    "phantomjs": "^1.9.17",
+    "postcss-loader": "^0.6.0",
     "raw-loader": "^0.5.1",
     "style-loader": "^0.12.3",
     "webpack": "^1.9.11",
     "webpack-dev-server": "^1.9.0"
-  },
-  "devDependencies": {
-    "angular-mocks": "^1.4.1",
-    "isparta-instrumenter-loader": "^0.2.1",
-    "jasmine-core": "^2.3.4",
-    "karma": "^0.12.36",
-    "karma-coverage": "^0.4.2",
-    "karma-jasmine": "^0.3.5",
-    "karma-phantomjs-launcher": "^0.2.0",
-    "karma-sourcemap-loader": "^0.3.5",
-    "karma-spec-reporter": "0.0.19",
-    "karma-webpack": "^1.5.1",
-    "null-loader": "^0.1.1",
-    "phantomjs": "^1.9.17"
   }
 }
