--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "description": "A workflow for Angular made with Webpack",
   "scripts": {
-    "build": "webpack --config webpack.build.js --bail -p",
-    "dev": "webpack-dev-server --history-api-fallback --inline --progress",
-    "test": "karma start",
-    "test:live": "karma start --auto-watch --no-single-run"
+    "build": "rimraf public && webpack --env prod --bail --progress --profile",
+    "server": "webpack-dev-server --env dev --history-api-fallback --inline --progress",
+    "test": "karma start --env test",
+    "test-watch": "karma start -env test --auto-watch --no-single-run",
+    "start": "npm run server"
   },
   "repository": {
     "type": "git",
@@ -19,37 +20,38 @@
   },
   "homepage": "https://github.com/Foxandxss/GermanWords-ng1-webpack",
   "dependencies": {
-    "angular": "^1.4.5",
+    "angular": "^1.5.0",
     "angular-ui-router": "^0.2.15",
     "bootstrap": "^3.3.4",
     "jwt-decode": "^1.1.1"
   },
   "devDependencies": {
-    "angular-mocks": "^1.4.7",
+    "angular-mocks": "^1.5.0",
     "autoprefixer": "^6.0.3",
     "babel-core": "^6.2.1",
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.1.18",
-    "css-loader": "^0.21.0",
-    "extract-text-webpack-plugin": "^0.8.2",
+    "copy-webpack-plugin": "^1.1.1",
+    "css-loader": "^0.23.0",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.4",
-    "html-webpack-plugin": "^1.6.2",
+    "html-webpack-plugin": "^2.7.1",
     "isparta-instrumenter-loader": "^1.0.0",
     "jasmine-core": "^2.3.4",
     "karma": "^0.13.14",
     "karma-coverage": "^0.5.3",
     "karma-jasmine": "^0.3.6",
-    "karma-phantomjs-launcher": "^0.2.1",
-    "karma-sourcemap-loader": "^0.3.6",
-    "karma-spec-reporter": "0.0.21",
+    "karma-phantomjs2-launcher": "^0.5.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-spec-reporter": "0.0.24",
     "karma-webpack": "^1.7.0",
-    "node-libs-browser": "^0.5.3",
+    "node-libs-browser": "^1.0.0",
     "null-loader": "^0.1.1",
-    "phantomjs": "^1.9.18",
-    "postcss-loader": "^0.7.0",
+    "postcss-loader": "^0.8.0",
     "raw-loader": "^0.5.1",
+    "rimraf": "^2.5.1",
     "style-loader": "^0.13.0",
-    "webpack": "^1.12.2",
-    "webpack-dev-server": "^1.12.1"
+    "webpack": "^2.0.7-beta",
+    "webpack-dev-server": "^2.0.0-beta"
   }
 }
